--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "format": "prettier --write .",
     "test": "vitest run",
     "dev:backend": "npm --prefix mock_backend start",
-    "dev:all": "concurrently \"npm run dev\" \"npm run dev:backend\""
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:backend\"",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:headed": "playwright test --headed"
   },
   "dependencies": {
     "vue": "^3.4.21",
@@ -32,6 +35,7 @@
     "prettier": "^3.2.5",
     "eslint-config-prettier": "^9.1.0",
     "vitest": "^1.6.0",
-    "concurrently": "^9.0.0"
+    "concurrently": "^9.0.0",
+    "@playwright/test": "^1.44.0"
   }
 }
