--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -16,6 +16,7 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npx playwright install --with-deps
+        continue-on-error: true
       - run: npm run build
       - run: npm run e2e
       - name: Upload Playwright report
