--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,26 +2,50 @@ name: e2e
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
   e2e:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
-      - run: npm ci
-      - run: npx playwright install --with-deps
+
+      # Use npm ci when lockfile exists; otherwise fall back to npm install
+      - name: Install deps (ci if lockfile, else install)
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci --no-audit --no-fund
+          else
+            npm install --no-audit --no-fund
+          fi
+
+      # In some runners Playwright browser download is blocked; don't fail the job because of it
+      - name: Install Playwright browsers (best-effort)
+        run: npx playwright install --with-deps
         continue-on-error: true
-      - run: npm run build
-      - run: npm run e2e
+
+      - name: Build app
+        run: npm run build
+
+      # This script already checks for @playwright/test and skips with exit 0 when missing
+      - name: Run e2e tests (skips if Playwright not available)
+        run: npm run e2e
+
+      # Upload report if it exists
       - name: Upload Playwright report
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
           path: playwright-report
+          if-no-files-found: ignore
