Add ESLint baseline and seed e2e session

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "vite build",
     "postbuild": "node scripts/after-build.cjs",
     "postinstall": "npx playwright install --with-deps || true",
-    "preview": "vite preview --port 5173 --strictPort",
-    "lint": "eslint . --ext .js,.vue",
+    "preview": "vite preview --host --port 5173",
+    "lint": "eslint . --ext .js,.vue --max-warnings=0",
     "lint:fix": "eslint . --ext .js,.vue --fix",
     "format": "prettier --write .",
     "test": "vitest run",
