--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postbuild": "node scripts/after-build.cjs",
     "postinstall": "npx playwright install --with-deps || true",
     "preview": "vite preview --host --port 5173",
+    "dev:e2e": "vite --host 127.0.0.1 --port 5173 --strictPort --mode e2e",
+    "preview:e2e": "vite build --mode e2e && vite preview --host 127.0.0.1 --port 5173 --strictPort",
     "lint": "eslint . --ext .js,.vue --max-warnings=0",
     "lint:fix": "eslint . --ext .js,.vue --fix",
     "format": "prettier --write .",
