--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "format": "prettier --write .",
     "test": "vitest run",
     "dev:backend": "npm --prefix mock_backend start",
+    "mock": "node mock_backend/server.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:backend\"",
-    "e2e": "node scripts/run-e2e.cjs",
+    "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
     "e2e:headed": "playwright test --headed",
     "e2e:report": "playwright show-report",
