feat(admin-studio): Billing Manager v1 with token credit/debit and ledger

--- a/.env.admin
+++ b/.env.admin
@@ -1,5 +1,5 @@
-ADMIN_KEY=dev-admin
-ADMIN_ORIGIN=http://localhost:5175
+ADMIN_KEY=dev-admin-key
+ADMIN_ORIGIN=http://localhost:5199
 VITE_ADMIN_BASE=http://localhost:5173/admin
-VITE_ADMIN_KEY=dev-admin
-VITE_ADMIN_PORT=5175
+VITE_ADMIN_KEY=dev-admin-key
+VITE_ADMIN_PORT=5199
