--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "preview": "vite preview --host --port 5173",
     "dev:e2e": "vite --host 127.0.0.1 --port 5173 --strictPort --mode e2e",
     "preview:e2e": "vite build --mode e2e && vite preview --host 127.0.0.1 --port 5173 --strictPort",
-    "dev:admin": "vite --config apps/admin-sim/vite.config.ts",
-    "admin:dev": "vite --config apps/admin-sim/vite.config.ts",
-    "build:admin": "vite build --config apps/admin-sim/vite.config.ts",
-    "preview:admin": "vite preview --config apps/admin-sim/vite.config.ts --port 5176",
+    "admin:dev": "vite --config apps/simulator-studio/vite.config.ts --port 5199",
+    "admin:build": "vite build --config apps/simulator-studio/vite.config.ts",
+    "admin:preview": "vite preview --config apps/simulator-studio/vite.config.ts --port 5199",
     "lint": "eslint . --ext .js,.vue --max-warnings=0",
     "lint:fix": "eslint . --ext .js,.vue --fix",
     "format": "prettier --write .",
