feat: seed 3 demo tenants + one-click "Open App as Tenant" + live chat console v1

--- a/.env.admin
+++ b/.env.admin
@@ -3,3 +3,5 @@ ADMIN_ORIGIN=http://localhost:5199
 VITE_ADMIN_BASE=http://localhost:5173/admin
 VITE_ADMIN_KEY=dev-admin-key
 VITE_ADMIN_PORT=5199
+VITE_APP_BASE_URL=http://localhost:5173
+DEV_IMPERSONATE=1
