--- a/apps/simulator-studio/.env.example
+++ b/apps/simulator-studio/.env.example
@@ -1,3 +1,4 @@
 VITE_ADMIN_API_BASE=http://localhost:5173
 VITE_ADMIN_KEY=dev-admin-key
+VITE_APP_BASE_URL=http://localhost:5173
 VITE_CONSOLE_POLL_MS=2000
