Add mock DB helper scripts

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "test": "vitest run",
     "dev:backend": "npm --prefix mock_backend start",
     "mock": "node mock_backend/server.js",
+    "mock:save": "node scripts/mockdb.js save",
+    "mock:reset": "node scripts/mockdb.js reset",
+    "mock:export": "node scripts/mockdb.js export",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:backend\"",
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
