feat(mockdb): add snapshot management ui and api

--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "test": "vitest run",
     "dev:backend": "npm --prefix mock_backend start",
     "mock": "node mock_backend/server.js",
-    "mock:save": "node scripts/mockdb.js save",
-    "mock:reset": "node scripts/mockdb.js reset",
-    "mock:export": "node scripts/mockdb.js export",
+    "mock:save": "node scripts/mockdb/save.js",
+    "mock:reset": "node scripts/mockdb/reset.js",
+    "mock:export": "node scripts/mockdb/export.js",
+    "mock:snapshot:list": "node scripts/mockdb/list.js",
+    "mock:snapshot:load": "node scripts/mockdb/load.js --name",
+    "mock:autosave:on": "MOCK_AUTOSAVE=1 node mock_backend/server.js",
+    "mock:autosave:off": "MOCK_AUTOSAVE=0 node mock_backend/server.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:backend\"",
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
