Fix Studio build and mock DB manager

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,8 @@
-# Autosave and journal
-MOCK_AUTOSAVE=1
-MOCK_AUTOSAVE_DEBOUNCE_MS=750
-MOCK_JOURNAL_DIR=.mockdb/journal
-MOCK_JOURNAL_LIMIT=50
+# Backend (mock server) for both apps
+VITE_API_BASE=http://localhost:5173
 
-# Snapshot directory
-MOCK_DB_DIR=.mockdb
-MOCK_DB_ACTIVE=.mockdb/current.json
+# Admin key for X-Admin-Key header
+VITE_ADMIN_KEY=dev-admin
 
-# Security
-ADMIN_KEY=dev-admin-key
-MOCK_ADMIN_ORIGIN=http://localhost:5174
+# Allow CORS (dev)
+VITE_CORS=1
