--- a/apps/simulator-studio/.env.example
+++ b/apps/simulator-studio/.env.example
@@ -1,5 +1,2 @@
-VITE_ADMIN_API_BASE=http://localhost:5173
-VITE_ADMIN_KEY=dev-admin-key
-VITE_APP_BASE_URL=http://localhost:5173
-VITE_CONSOLE_POLL_MS=2000
-VITE_DEV_LOGIN=1
+VITE_API_BASE=http://localhost:5173
+VITE_ADMIN_KEY=dev-admin
