--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "deploy": "gh-pages -d dist",
-    "dev": "vite",
+    "dev": "vite --port 5173",
     "build": "vite build",
     "postbuild": "node scripts/after-build.cjs",
     "postinstall": "npx playwright install --with-deps || true",
@@ -15,6 +15,7 @@
     "admin:dev": "vite --config apps/simulator-studio/vite.config.ts --port 5199",
     "admin:build": "vite build --config apps/simulator-studio/vite.config.ts",
     "admin:preview": "vite preview --config apps/simulator-studio/vite.config.ts --port 5199",
+    "typecheck": "vue-tsc --noEmit",
     "lint": "eslint . --ext .js,.vue --max-warnings=0",
     "lint:fix": "eslint . --ext .js,.vue --fix",
     "format": "prettier --write .",
@@ -24,8 +25,8 @@
     "mock:save": "node scripts/mockdb/save.js",
     "mock:reset": "node scripts/mockdb/reset.js",
     "mock:export": "node scripts/mockdb/export.js",
-    "mock:snapshot:list": "node scripts/mockdb/list.js",
-    "mock:snapshot:load": "node scripts/mockdb/load.js --name",
+    "mock:list": "node scripts/mockdb/list.js",
+    "mock:load": "node scripts/mockdb/load.js",
     "mock:autosave:on": "MOCK_AUTOSAVE=1 node mock_backend/server.js",
     "mock:autosave:off": "MOCK_AUTOSAVE=0 node mock_backend/server.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:backend\"",
@@ -36,22 +37,27 @@
     "docs:open": "xdg-open docs/ARCHITECTURE.md || open docs/ARCHITECTURE.md || start docs/ARCHITECTURE.md"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
+    "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.46.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^9.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.23.0",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.8",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
-    "eslint-config-prettier": "^9.1.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.0",
+    "vite": "^5.2.8",
     "vitest": "^1.6.0",
-    "concurrently": "^9.0.0",
-    "@playwright/test": "^1.46.0"
+    "vue-tsc": "^1.8.27"
   }
 }
