--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.0",
+    "@types/node": "^20",
+    "typescript": "^5",
     "vite": "^5.2.8",
     "vitest": "^1.6.0",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2"
   }
 }
