--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,3 @@
-# Backend (mock server) for both apps
-VITE_API_BASE=http://localhost:5173
-
-# Admin key for X-Admin-Key header
-VITE_ADMIN_KEY=dev-admin
-
-# Allow CORS (dev)
-VITE_CORS=1
+VITE_API_BASE=http://localhost:5174
+VITE_ADMIN_KEY=dev-admin-key
+VITE_ENABLE_CORS=1
