--- a/apps/simulator-studio/tsconfig.json
+++ b/apps/simulator-studio/tsconfig.json
@@ -1,16 +1,7 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    },
-    "jsx": "preserve",
-    "strict": true,
     "types": ["vite/client"]
   },
-  "include": ["src/**/*", "index.html"]
+  "include": ["src", "env.d.ts"]
 }
