--- a/apps/simulator-studio/tsconfig.json
+++ b/apps/simulator-studio/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@studio/*": ["src/*"]
+    }
   },
   "include": ["src", "env.d.ts"]
 }
