Add simulator console with websocket events

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,17 @@
-VITE_API_BASE=http://localhost:5174
-VITE_ADMIN_KEY=dev-admin-key
-VITE_ENABLE_CORS=1
-AUTOSAVE=0
+# Ports
+APP_PORT=5173
+STUDIO_PORT=5199
+MOCK_PORT=3001
 
+# URLs
+VITE_API_BASE=http://localhost:3001
+
+# Admin
+VITE_ADMIN_KEY=dev_admin_key
+
+# CORS (0/1)
+VITE_ALLOW_CORS=1
+
+# Demo auth / seeding
+USE_DEMO_AUTH=1
+SEED_ON_START=1
