--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "type": "module",
   "scripts": {
     "deploy": "gh-pages -d dist",
-    "dev": "vite --port 5173",
-    "client:dev": "vite --port 5173",
-    "build": "vite build",
+    "dev": "vite --config apps/main-app/vite.config.ts",
+    "client:dev": "vite --config apps/main-app/vite.config.ts",
+    "build": "vite build --config apps/main-app/vite.config.ts",
     "postbuild": "node scripts/after-build.cjs",
-    "postinstall": "npx playwright install --with-deps || true",
-    "preview": "vite preview --host --port 5173",
-    "dev:e2e": "vite --host 127.0.0.1 --port 5173 --strictPort --mode e2e",
-    "preview:e2e": "vite build --mode e2e && vite preview --host 127.0.0.1 --port 5173 --strictPort",
+    "preview": "vite preview --host --config apps/main-app/vite.config.ts",
+    "dev:e2e": "vite --host 127.0.0.1 --strictPort --mode e2e --config apps/main-app/vite.config.ts",
+    "preview:e2e": "vite build --mode e2e --config apps/main-app/vite.config.ts && vite preview --host 127.0.0.1 --strictPort --config apps/main-app/vite.config.ts",
     "mock:dev": "node apps/mock-backend/server.js",
-    "admin:dev": "vite --config apps/simulator-studio/vite.config.ts --port 5199",
+    "admin:dev": "vite --config apps/simulator-studio/vite.config.ts",
     "admin:build": "vite build --config apps/simulator-studio/vite.config.ts",
-    "admin:preview": "vite preview --config apps/simulator-studio/vite.config.ts --port 5199",
+    "admin:preview": "vite preview --config apps/simulator-studio/vite.config.ts",
     "typecheck": "vue-tsc --noEmit",
     "lint": "eslint . --ext .js,.vue --max-warnings=0",
     "lint:fix": "eslint . --ext .js,.vue --fix",
@@ -31,14 +30,15 @@
     "mock:load": "node apps/mock-backend/snapshots/load.js",
     "mock:autosave:on": "MOCK_AUTOSAVE=1 node mock_backend/server.js",
     "mock:autosave:off": "MOCK_AUTOSAVE=0 node mock_backend/server.js",
-    "dev:all": "concurrently -k -n BACKEND,APP,STUDIO -c cyan,green,magenta \"npm:mock:dev\" \"npm:dev\" \"npm:admin:dev\"",
+    "dev:all": "npm-run-all -p mock:dev client:dev admin:dev",
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
     "e2e:headed": "playwright test --headed",
     "e2e:report": "playwright show-report",
     "docs:open": "xdg-open docs/ARCHITECTURE.md || open docs/ARCHITECTURE.md || start docs/ARCHITECTURE.md",
     "open:dev": "start http://localhost:5199/#/console",
-    "admin:open": "start http://localhost:5199/login.html?skipAuth=1"
+    "admin:open": "start http://localhost:5199/login.html?skipAuth=1",
+    "seed:demo": "node apps/mock-backend/scripts/seed-demo.js"
   },
   "dependencies": {
     "axios": "^1.7.0",
@@ -48,13 +48,13 @@
     "vue-router": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "nanoid": "^5.0.7"
+    "nanoid": "^5.0.7",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.46.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
-    "concurrently": "^9.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.23.0",
@@ -65,6 +65,8 @@
     "typescript": "^5.4.0",
     "vite": "^5.4.0",
     "vue-tsc": "^1.8.27",
-    "@types/node": "^20.11.30"
+    "@types/node": "^20.11.30",
+    "cross-env": "^7.0.3",
+    "npm-run-all": "^4.1.5"
   }
 }
