Add preflight view and smoke tests

--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,16 @@ APP_PORT=5173
 STUDIO_PORT=5199
 MOCK_PORT=3001
 
-# URLs
+# Studio → Backend
 VITE_API_BASE=http://localhost:3001
 
-# Admin
-VITE_ADMIN_KEY=dev_admin_key
+# Feature flags (keep simulator off for this task)
+VITE_ENABLE_SIMULATOR=false
+MOCK_ENABLE_SIMULATOR=false
 
-# CORS (0/1)
-VITE_ALLOW_CORS=1
+# Auth/session
+VITE_STUDIO_TOKEN_KEY=studio.auth.token
+MOCK_JWT_SECRET=dev-secret-please-change
 
-# Demo auth / seeding
-USE_DEMO_AUTH=1
-SEED_ON_START=1
+# Admin key (not used here, reserved)
+VITE_ADMIN_KEY=dev-admin-key
