--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,2 +1,14 @@
 {
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "jsx": "preserve",
+    "allowJs": true,
+    "checkJs": false,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["apps/simulator-studio/src/*"]
+    }
+  }
 }
